--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
   <!-- App Container -->
   <div class="container">
-    <h1>🔗 TinyURL Shortener</h1>
+    <h1>🔗 URL Shortener</h1>
 
     <input type="text" id="longUrl" placeholder="Enter long URL here" />
 
